// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse_int with non-integer arg radix throws error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int(42, 2.1);",
  "displayResult": Array [],
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with non-string arg str throws error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int(42, 2);",
  "displayResult": Array [],
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=1: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int('10', 1);",
  "displayResult": Array [],
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=37: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int('10', 37);",
  "displayResult": Array [],
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 19,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with string arg radix throws error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int(42, '2');",
  "displayResult": Array [],
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with valid args is ok, but invalid str for radix: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int('uu1', 2);",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "result": NaN,
  "resultStatus": "finished",
  "transpiled": "const native = $$NATIVE_STORAGE;
const forceIt = native.operators.get(\\"forceIt\\");
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = $NATIVE_STORAGE.globals;
const __createKernel = native.gpu.get(\\"__createKernel\\");
(( <globals redacted> ) => {
  return (() => {
    {
      {
        lastStatementResult = eval(\\"callIfFuncAndRightArgs(parse_int, 1, 0, 'uu1', 2);\\");
      }
    }
    return forceIt(lastStatementResult);
  })();
})();
",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with valid args is ok, radix 2: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int('1100101010101', 2);",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "result": 6485,
  "resultStatus": "finished",
  "transpiled": "const native = $$NATIVE_STORAGE;
const forceIt = native.operators.get(\\"forceIt\\");
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = $NATIVE_STORAGE.globals;
const __createKernel = native.gpu.get(\\"__createKernel\\");
(( <globals redacted> ) => {
  return (() => {
    {
      {
        lastStatementResult = eval(\\"callIfFuncAndRightArgs(parse_int, 1, 0, '1100101010101', 2);\\");
      }
    }
    return forceIt(lastStatementResult);
  })();
})();
",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with valid args is ok, radix 36: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int('uu1', 36);",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "result": 39961,
  "resultStatus": "finished",
  "transpiled": "const native = $$NATIVE_STORAGE;
const forceIt = native.operators.get(\\"forceIt\\");
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = $NATIVE_STORAGE.globals;
const __createKernel = native.gpu.get(\\"__createKernel\\");
(( <globals redacted> ) => {
  return (() => {
    {
      {
        lastStatementResult = eval(\\"callIfFuncAndRightArgs(parse_int, 1, 0, 'uu1', 36);\\");
      }
    }
    return forceIt(lastStatementResult);
  })();
})();
",
  "visualiseListResult": Array [],
}
`;
